Fun pig game completed

--- a/pig.css
+++ b/pig.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(62, 20, 20, 0.5), rgba(62, 20, 20, 0.5)), url(back2.jpg);
+    background-image: linear-gradient(rgba(62, 20, 20, 0.5), rgba(62, 20, 20, 0.5)), url(img/back2.jpg);
     background-size: contain;
     background-position: center;
     font-family: Lato;
